configurando o JPA e o MySQL no aplication.Propeties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=Barbearia
+
+#Configuracao do JPA
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+#Configuracao do banco de dados MySQL
+spring.datasource.url=jdbc:mysql://localhost/barbearia?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=
+spring.datasource.password=
+
